Modify copied files in order to only compile them out. Some tests were reproduced to test the parser itself, and all those ones surprisingly went ok.
Signed-off-by: Paulo Alcantara <paulo.alcantara@openbossa.org>

--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,6 @@ tests/valgrind/memcheck/testapps/uninit3/uninit3
 tests/valgrind/memcheck/testrunner
 tests/valgrind/callgrind/callgrindparsertests
 tests/valgrind/callgrind/modeltest
+
+# Python's source code
+src/libs/python/python-src/*
